Changelog
=========


2.0a8 (unreleased)
------------------

- Added support for i18n [macagua]

- Added support for Spanisn translation [macagua]


2.0a7 (2010-08-01)
------------------

- Update profile installation to work with GenericSetup 1.6.x. [davisagli]

- Made IObjectModifiedEvent import location conditional for compatibility with
  Zope 2.12. [tom_gross]

2.0a6 (2009-08-07)
------------------

- The import link is no longer shown in Topics. [regebro]


2.0a5 (2009-07-05)
------------------

- Removed p4a.ploneevent as a dependency. It's not required. [regebro]


2.0a3 (2009-05-17)
------------------

- Fixed issue where a TopicEventProvider died on topics with no criteria. This
  fixes #152 [claytron]

- Fixed an issue where a recurring event would show up in TopicEventProvider
  results no matter what the criteria on the topic were. [claytron]

- Added uninstalling support, which fixes #168. [regebro]

- Updated wording to be consistent with other iCal/vCal actions. [aaronvanderlip]

- Fixed an issue where a recurring event would show up in TopicEventProvider
  results no matter what the criteria on the topic were. [lucielejard]

- Fixed Trac #138 (fixing daily 'Add...' link so it defaults start/end dates
  to the proper day) by building a portal_factory link with startDate and 
  endDate query string parameters for each day. [brianfive]

- Re-enabled the import UI by adding beforecontent viewlet that shows
  icon and link. [aaronvanderlip]


2.0a2 (2008-10-04)
------------------

- Implemented the canCreate method for the ATEventCreator so that the 'Add...'
  does not show for anonymous. [claytron]

- Updated the way we get all the events in the exportCalendar method and
  added parameters for restricting the export. [lucielejard]

- Various fixes in the recurring event support.


2.0a1 (2008-07-09)
------------------

- Reworked to use dateables views and interfaces instead of p4a.calendar.

- Package is now installable via CMFQuickInstaller.
